mdapi/src/objects/Expense_Item__c.object
<CustomObject>
    <label>Expense Item</label>
    <nameField>
        <label>Expense Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Currency amount of expense item</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>KYD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>ISK</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>User can add date item was created</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Currency exchange rate</description>
        <label>Exchange_Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Category</label>
        <referenceTo>Expense_Category__c</referenceTo>
        <relationshipLabel>Expense Items</relationshipLabel>
        <relationshipName>Expense_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Report__c</fullName>
        <label>Expense Report</label>
        <referenceTo>Expense_Report__c</referenceTo>
        <relationshipLabel>Expense Items</relationshipLabel>
        <relationshipName>Expense_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reimbursable_amount__c</fullName>
        <label>Reimbursable_amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>